<?xml version="1.0"?>
<package>
  <name>listener</name>
  <version>0.0.0</version>
  <description>Listen to Pose and Wifi</description>

  <maintainer email="rtindel2@gmu.edu">Robert Tindell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
<build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>                            

    <gazebo_ros                                                                

    gazebo_model_path="${prefix}/../pioneer3dx"/>                    
</export>
</package>
